viewport fix on mobiles

--- a/css/expdb.css
+++ b/css/expdb.css
@@ -691,6 +691,8 @@ select{
 
 .guidecontainer{
   background-color: #ffffff;
+  height: 100%;
+  min-height: 1000px;
 }
 
 .guidechapter{
